# org.s7s.instance.agent.rust

./: .gitignore  .gitmodules  Cargo.toml  build.gradle.kts  main.rs  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml
src/: connection.rs  cvid.rs  main.rs  text.rs
src/main/java/: module-info.java
src/main/resources/agent/: config.properties
src/main/resources/bootagent/: sandpolis.sixel
src/main/rust/: connection.rs  main.rs
src/main/rust/agent/: main.rs
src/main/rust/bootagent/: main.rs
src/main/rust/bootagent/snapshot/: ui.rs  utils.rs
src/main/rust/lib/: connection.rs  cvid.rs
