[package]
name = "com-sandpolis-agent-micro"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "agent"
path = "src/main/rust/agent/main.rs"

[[bin]]
name = "bootagent"
path = "src/main/rust/bootagent/main.rs"

[dependencies]
anyhow = "1.0"
dotproperties = "0.1"
env_logger = "0.8"
fasthash = "0.4"
log = "0.4"
memmap = "0.7"
pancurses = { version = "0.16", features = ["wide"] }
predicates = "2.0.0"
protobuf = { version = "2", features = ["with-bytes"] }
rust-embed = "5.9"
rustls = "0.19.0"
uuid = { version = "0.8", features = ["v4"] }
webpki-roots = "0.21"
webpki = "0.21.4"
